--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -86,7 +86,7 @@ Content that is flagged by the model will be sent to the **Content Queue**. This
 <Frame>
   <img
     className="block "
-    src="/images/review-queue.png"
+    src="/images/content-queue.png"
     alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
