--- a/review-queues/overview.mdx
+++ b/review-queues/overview.mdx
@@ -7,7 +7,7 @@ description: "What are review queues and how do they work?"
 <Frame>
   <img
     className="block "
-    src="/images/review-queue.png"
+    src="/images/content-queue.png"
     alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
