--- a/review-queues/using-queues.mdx
+++ b/review-queues/using-queues.mdx
@@ -7,7 +7,7 @@ description: "Going over the basics of how to use review queues"
 <Frame>
   <img
     className="block "
-    src="/images/review-queue.png"
+    src="/images/content-queue.png"
     alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
@@ -51,7 +51,7 @@ Below the charts you have the list of items in the queue. Here you can:
 <Frame caption="The queue is a list of items that need to be reviewed">
   <img
     className="block "
-    src="/images/review-queue-list.png"
+    src="/images/content-queue-list.png"
     alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
@@ -63,7 +63,7 @@ If you quickly want to resolve a lot of items, you can select the items you want
 <Frame caption="The detail view for an item in the queue">
   <img
     className="block "
-    src="/images/review-queue-detail-2.png"
+    src="/images/content-queue-detail-2.png"
     alt="Review queue detail view"
   />
 </Frame>
@@ -104,7 +104,7 @@ If you remove all labels, it will be interpreted as a `NEUTRAL` label, indicatin
 <Frame caption="Correcting AI decision by removing a label and adding a new.">
   <img
     className="block "
-    src="/images/review-queue-correct.gif"
+    src="/images/content-queue-correct.gif"
     alt="Correcting model decision"
   />
 </Frame>
