--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -8,7 +8,7 @@ description: "The Moderation API is organized around REST. Our API has predictab
 Check out our quickstart guide to get up and running.
 
 <CardGroup cols={2}>
-  <Card title="Quickstart" icon="rocket" href="/docs/quickstart">
+  <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
     Get set up with Moderation API in 5 minutes.
   </Card>
   <Card
