--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -63,7 +63,7 @@ Here are some examples on how to use the response in your application.
 
 ### Utilize flagged field
 
-The easiest way to get started is to use the `flagged` field. The `flagged` field is a boolean that indicates if any of the models detected something non-neutral. You can adjust the thresholds for flagging content in the project settings. See [flagging thresholds](/content-moderation/project-setup#flagging-thresholds).
+The easiest way to get started is to use the `flagged` field. The `flagged` field is a boolean that indicates if any of the models detected something non-neutral. You can adjust the thresholds for flagging content in the project settings. See [flagging thresholds](/content-moderation/flagging-thresholds).
 
 ```javascript
 if (data.flagged) {
