--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -81,7 +81,7 @@ Utilize the `flagged` field to determine how to handle the content. For example 
 
 ## 3. Review flagged content (optional)
 
-Content that is flagged by the model will be sent to the **Content Queue**. This is useful if you want to combine automated content moderation with human moderation, or if you simply want to review what content is being flagged.<br></br>
+Content that is flagged by the model will be sent to the [Review Queue](/review-queues). This is useful if you want to combine automated content moderation with human moderation, or if you simply want to review what content is being flagged.<br></br>
 
 <Frame>
   <img
@@ -91,13 +91,15 @@ Content that is flagged by the model will be sent to the **Content Queue**. This
   />
 </Frame>
 
-The review queue can be used for a variety of use cases:
+Some of the things you can do with review queues:
 
-- **Human moderation** - Review content that is flagged by the model and decide whether to block or allow the content.
-- **Improve custom models** - Review content that is flagged by the model and provide feedback to the model. This will help the model learn and improve over time.
-- **Manual actions** - Ban, block, or warn users based on the content they post.
-- **Multiple queues** - Create multiple queues for different use cases. For example, you can create a queue for each language that you support or different types of content.
-- **Invite moderators** - Invite your team or hire moderators to help you review content in the queue.
+- Review content before it's published
+- Perform a manual review of content that was automatically rejected
+- Review content that was flagged by users
+- Ban users that are submitting unwanted content
+- Improve your models by correcting mistakes
+- Get insights into the content that is being submitted
+- Invite moderators to help you review content
 
 ## All done!
 
