--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -36,6 +36,22 @@ If you're not a developer, you can still use the API. We have many integrations 
 
 </CardGroup>
 
+## SDKs
+
+Moderation API's server-side helper libraries (also known as server-side SDKs) reduce the amount of work required to use the REST APIs, starting with reducing the boilerplate code you have to write.
+
+<CardGroup cols={2}>
+
+<Card
+  title="Node library"
+  icon="node-js"
+  href="https://www.npmjs.com/package/@moderation-api/sdk"
+>
+  Library for Node.js with support for TypeScript.
+</Card>
+
+</CardGroup>
+
 ## OpenAPI Specification
 
 Moderation API's OpenAPI specification empowers you with a broad set of developer tooling.
@@ -44,7 +60,7 @@ Moderation API's OpenAPI specification empowers you with a broad set of develope
 
 <Card
   title="OpenAPI Specification "
-  icon="code"
+  icon="brackets-curly"
   href="https://moderationapi.com/api/v1/openapi.json"
 >
   Access the OpenAPI specification for the Moderation API.
