--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -7,7 +7,22 @@ To analyze text, you need to send a POST request with the text to the [text mode
 
 ## Example
 
-```javascript Node.js text analysis example
+<CodeGroup>
+
+```typescript Node.js
+import ModerationAPi from "@moderation-api/sdk";
+
+const moderationApi = new ModerationAPi({
+  key: process.env.API_KEY,
+});
+
+const analysis = await moderationApi.moderate.text({
+  value:
+    "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
+});
+```
+
+```javascript Node.js fetch
 const response = await fetch("https://moderationapi.com/api/v1/moderate/text", {
   method: "POST",
   headers: {
@@ -21,6 +36,8 @@ const response = await fetch("https://moderationapi.com/api/v1/moderate/text", {
 
 const data = await data.json();
 ```
+
+</CodeGroup>
 
 ```json Response example
 {
