--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -10,9 +10,9 @@ To analyze text, you need to send a POST request with the text to the [text mode
 <CodeGroup>
 
 ```typescript Node.js
-import ModerationAPi from "@moderation-api/sdk";
+import ModerationApi from "@moderation-api/sdk";
 
-const moderationApi = new ModerationAPi({
+const moderationApi = new ModerationApi({
   key: process.env.API_KEY,
 });
 
