--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -48,9 +48,9 @@ Or use one of our [server SDKs](/api-reference/introduction#sdks) to make it eve
 <CodeGroup>
 
 ```typescript Node.js example
-import ModerationAPi from "@moderation-api/sdk";
+import ModerationApi from "@moderation-api/sdk";
 
-const moderationApi = new ModerationAPi({
+const moderationApi = new ModerationApi({
   key: process.env.API_KEY,
 });
 
