--- a/review-queues/actions.mdx
+++ b/review-queues/actions.mdx
@@ -14,11 +14,18 @@ description: "Learn how to use actions to moderate content and users"
 
 You can create custom actions to execute on content or users. The actions will show up in the selected moderation queues, and can be executed by moderators.<br></br>
 
-On way of using actions is to create a custom queues that shows only content that have had a specific action performed. This way you can move content between queues using actions. <br></br>
+Then you can act on the action using webhooks in your application, or using one of our [platform plugins](https://moderationapi.com/integrations).
+
+Another use of actions is to move content to a different queue. Accomplish this by creating a new queue that shows only content with a certain action performed. <br></br>
 
 Actions can also be performed programmatically using the [execute action endpoint](/api-reference/execute-an-action).
 
-We recommend using actions for things like removing content from your platform, or banning users. <br></br>
+We recommend using actions for things like:
+
+- Publish approved content
+- Remove rejected content
+- Ban or approve users
+- ... and anything else you can think of
 
 ## Resolving an item when action is executed
 
