guide for user reported content

--- a/api-reference/analyze-text.mdx
+++ b/api-reference/analyze-text.mdx
@@ -5,7 +5,8 @@ openapi: post /moderate/text
 <ResponseExample>
 ```json 200
 {
-   "status": "success",
+    "status": "success",
+    "contentId": "5f9b3b4b-5b0a-4b5a-8b0a-4b5a8b0a4b5a",
     "request": {
         "timestamp": 1699344668022,
         "quota_usage": 1,
@@ -45,3 +46,4 @@ openapi: post /moderate/text
 </ ResponseExample>
 
 
+```
