--- a/models/propriety.mdx
+++ b/models/propriety.mdx
@@ -5,7 +5,7 @@ sidebarTitle: "Propriety"
 
 > Model key: `propriety`
 
-Detect sexual and flirty language. Closely related to the toxicity model but specialized to detect more subtle inappropriate comments.
+Detect sexual and flirty language. Closely related to the toxicity and sexual model but specialized to detect more subtle inappropriate comments.
 
 ```json Response Example:
 {
