--- a/models/audio-models.mdx
+++ b/models/audio-models.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Audio models"
+title: "Audio moderation"
 ---
 
 Audio models are available to customers on custom plans. If you're interested in using image models, please [reach out here](https://moderationapi.com/sales).
