--- a/models/classifier-overview.mdx
+++ b/models/classifier-overview.mdx
@@ -44,8 +44,28 @@ Each classifier model returns an object with the detected label and the respecti
   Detects spam.
 </Card>
 
-<Card title="Language" href="/models/language" icon="globe">
+<Card title="Language" href="/models/language" icon="language">
   Detects the language.
+</Card>
+
+<Card title="Sexual" href="/models/sexual" icon="venus-mars">
+  Detects sexual content.
+</Card>
+
+<Card
+  title="Discrimination"
+  href="/models/discrimination"
+  icon="hand-point-right"
+>
+  Detects discriminating content.
+</Card>
+
+<Card title="Self harm" href="/models/self-harm" icon="face-frown">
+  Detects content related to self harm.
+</Card>
+
+<Card title="Violence" href="/models/violence" icon="hand-fist">
+  Detects content related to violence.
 </Card>
 
 </CardGroup>
