--- a/models/image-models.mdx
+++ b/models/image-models.mdx
@@ -1,5 +1,85 @@
 ---
-title: "Image models"
+title: "Image moderation"
+description: "Image moderation models are used to detect inappropriate content in images."
 ---
 
-Image models are enabled on an account basis. If you don't have access to image models, please contact our support team.
+<Note>
+At the moment we are offering a single model that detects a range of common inappropriate content.
+
+If you need a label that is not currently supported, please contact us at
+support@moderationapi.com
+
+</Note>
+
+### Response signature
+
+<ResponseField name="flagged" type="boolean" required></ResponseField>
+<ResponseField name="labels" type="array" required>
+  An object containing all the label scores.
+  <Expandable title="properties">
+    <ResponseField name="label" type="string" required>
+      The label name.
+    </ResponseField>
+    <ResponseField name="score" type="number" required>
+      The label score from 0 to 1.
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
+```json Image Moderation Response Example:
+{
+  "flagged": true,
+  "labels": [
+    {
+      "label": "nudity",
+      "score": 0.996117
+    },
+    {
+      "label": "gore",
+      "score": 0.034441
+    },
+    {
+      "label": "suggestive",
+      "score": 0.004936
+    },
+    {
+      "label": "violence",
+      "score": 0.00036
+    },
+    {
+      "label": "weapon",
+      "score": 0.000079
+    },
+    {
+      "label": "drugs",
+      "score": 0.000034
+    },
+    {
+      "label": "hate",
+      "score": 0.000032
+    },
+    {
+      "label": "smoking",
+      "score": 0.000018
+    },
+    {
+      "label": "alcohol",
+      "score": 0.000005
+    }
+  ]
+}
+```
+
+## Labels
+
+| Label          | Description                                                          |
+| -------------- | -------------------------------------------------------------------- |
+| **nudity**     | Exposed male or female genitalia, female nipples, sexual acts.       |
+| **suggestive** | Partial nudity, kissing.                                             |
+| **gore**       | Blood, wounds, death.                                                |
+| **violence**   | Graphic violence, causing harm, weapons, self-harm.                  |
+| **weapon**     | Weapons either in use or displayed.                                  |
+| **drugs**      | Drugs such as pills.                                                 |
+| **hate**       | Symbols related to nazi, terrorist groups, white supremacy and more. |
+| **smoking**    | Smoking or smoking related content.                                  |
+| **alcohol**    | Alcohol or alcohol related content.                                  |
