--- a/models/video-models.mdx
+++ b/models/video-models.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Video models"
+title: "Video moderation"
 ---
 
 Video models are available to customers on custom plans. If you're interested in using image models, please [reach out here](https://moderationapi.com/sales).
