--- a/models/image-models.mdx
+++ b/models/image-models.mdx
@@ -3,10 +3,14 @@ title: "Image moderation"
 description: "Image moderation models are used to detect inappropriate content in images."
 ---
 
-<Note>
-At the moment we are offering a single model that detects a range of common inappropriate content.
+We are offering two image moderation models.
 
-If you need a label that is not currently supported, please contact us at
+- An NSFW model that detects a range of common inappropriate content
+- A text model that detects text inside images.
+
+<Note>
+
+If you need a label/model that is not currently supported, please contact us at
 support@moderationapi.com
 
 </Note>
@@ -24,6 +28,9 @@ support@moderationapi.com
       The label score from 0 to 1.
     </ResponseField>
   </Expandable>
+</ResponseField>
+<ResponseField name="texts" type="string[]">
+  The text which was detected in the image if the text model is used.
 </ResponseField>
 
 ```json Image Moderation Response Example:
@@ -65,6 +72,10 @@ support@moderationapi.com
     {
       "label": "alcohol",
       "score": 0.000005
+    },
+    {
+      "label": "text",
+      "score": 0.000005
     }
   ]
 }
@@ -83,3 +94,4 @@ support@moderationapi.com
 | **hate**       | Symbols related to nazi, terrorist groups, white supremacy and more. |
 | **smoking**    | Smoking or smoking related content.                                  |
 | **alcohol**    | Alcohol or alcohol related content.                                  |
+| **text**       | Text inside the picture                                              |
