--- a/_snippets/languages.mdx
+++ b/_snippets/languages.mdx
@@ -9,6 +9,7 @@ This model works in the following languages:
 - Italian `it`
 - Portuguese `pt`
 - Russian `ru`
+- Japanese `ja`
 - Indonesian `id`
 - Chinese `zh`
 - Dutch `nl`
