--- a/models/discrimination.mdx
+++ b/models/discrimination.mdx
@@ -25,6 +25,6 @@ sidebarTitle: "Discrimination"
 | **DISCRIMINATION_MINORITY** | Discrimination of religion, ethnicity, sexual orientation, disabled, etc. |
 | **NEUTRAL**                 | Neutral content.                                                          |
 
-<Snippet file="languages-english.mdx" />
+<Snippet file="languages.mdx" />
 
 <Snippet file="limitations.mdx" />
