--- a/models/self-harm.mdx
+++ b/models/self-harm.mdx
@@ -27,6 +27,6 @@ sidebarTitle: "Self harm"
 | **SELF_HARM_DIRECTION** | The author is giving directions for self harm.                            |
 | **NEUTRAL**             | No references to self harm.                                               |
 
-<Snippet file="languages-english.mdx" />
+<Snippet file="languages.mdx" />
 
 <Snippet file="limitations.mdx" />
