--- a/models/sentiment.mdx
+++ b/models/sentiment.mdx
@@ -32,7 +32,7 @@ The sentiment analyzer is trained to detect the sentiment of a text. It can dete
 | **POSITIVE** | Positive sentiment |
 | **NEUTRAL**  |                    |
 
-<Snippet file="languages.mdx" />
+<Snippet file="languages-english.mdx" />
 
 ## Limitations
 
