--- a/models/sexual.mdx
+++ b/models/sexual.mdx
@@ -25,6 +25,6 @@ sidebarTitle: "Sexual"
 | **SEXUAL_MINOR** | Only triggered if the subject is under 18. |
 | **NEUTRAL**      | Nothing sexual was detected.               |
 
-<Snippet file="languages-english.mdx" />
+<Snippet file="languages.mdx" />
 
 <Snippet file="limitations.mdx" />
