--- a/models/violence.mdx
+++ b/models/violence.mdx
@@ -23,6 +23,6 @@ sidebarTitle: "Violence"
 | `VIOLENCE` | The content contains violent intent, or depicts violence. |
 | `NEUTRAL`  | The content does not contain violence.                    |
 
-<Snippet file="languages-english.mdx" />
+<Snippet file="languages.mdx" />
 
 <Snippet file="limitations.mdx" />
