--- a/review-queues/using-queues.mdx
+++ b/review-queues/using-queues.mdx
@@ -159,6 +159,14 @@ If you submit a context ID with your content, you can filter the queue by that c
 
 For example, if you submit a context ID for a thread in your forum, you can filter the queue to only show items from that thread in order. This makes it easy to review all content in a thread in one go, and see items in the context of the thread.
 
+<Frame>
+  <img
+    className="block "
+    src="/images/context-author.png"
+    alt="Filtering by context and author"
+  />
+</Frame>
+
 ### Filter by author
 
 If you submit an author ID with your content, you can filter the queue by that author ID.
