--- a/review-queues/using-queues.mdx
+++ b/review-queues/using-queues.mdx
@@ -153,7 +153,7 @@ This is important if you have multiple queues for different purposes. For exampl
 
 Using the queue filter button you can narrow down on a set of items in the queue.
 
-### Filter by context
+### Show content from a thread
 
 If you submit a context ID with your content, you can filter the queue by that context ID.
 
@@ -167,7 +167,7 @@ For example, if you submit a context ID for a thread in your forum, you can filt
   />
 </Frame>
 
-### Filter by author
+### Show content by user
 
 If you submit an author ID with your content, you can filter the queue by that author ID.
 
