--- a/review-queues/using-queues.mdx
+++ b/review-queues/using-queues.mdx
@@ -109,6 +109,8 @@ If you remove all labels, it will be interpreted as a `NEUTRAL` label, indicatin
   />
 </Frame>
 
+Next time you train a custom model, the feedback will be used for improving the model. See more about [adaptive model optimization here](/custom-models/adaptive-model-optimization).
+
 ### Executing actions and resolving
 
 In the detail view you can also execute [actions](/review-queues/actions) for the item, or resolve the item.
