--- a/account/adding-team-members.mdx
+++ b/account/adding-team-members.mdx
@@ -3,4 +3,15 @@ title: "Manage team"
 description: "How to add team members to your organization"
 ---
 
-Please reach out to us at [support@moderationapi.com](mailto:support@moderationapi.com) to add additional team members to your organization.
+Visit the [team management page](https://moderationapi.com/app/team) to add team members to your organization.
+
+You can add team members by entering their email address. They will receive an email invitation to join your organization.
+
+## Roles
+
+There are three roles in an organization:
+
+- **Owner**: The owner has full access to the organization and can manage team members and billing. Only one owner can exist per organization and cannot be removed or changed.
+- **Admin**: The admin has full access to the organization and can manage team members and billing.
+- **Developer**: The developer can access and change the projects, models, and review queues, but cannot manage team members or billing.
+- **Moderator**: The moderator can access and use the review queues, but cannot manage team members, billing, projects, or models. You can limit the access of moderators to specific queues.
