--- a/custom-models/creating-a-model.mdx
+++ b/custom-models/creating-a-model.mdx
@@ -15,7 +15,7 @@ Head over to your moderation API dashboard and press the models tab. Here you ca
 
   <img
     className="block"
-    src="images/model-type-1.png"
+    src="/images/model-type-1.png"
     alt="Select your type of model"
     noZoom
    
@@ -29,7 +29,7 @@ Head over to your moderation API dashboard and press the models tab. Here you ca
 
 <img
   className="block"
-  src="images/model-labels-1.png"
+  src="/images/model-labels-1.png"
   alt="Add your labels"
   noZoom
 />
@@ -61,7 +61,7 @@ We provide you with 3 options to add data:
 
 <img
   className="block"
-  src="images/model-data-import-1.png"
+  src="/images/model-data-import-1.png"
   alt="Add your data"
   noZoom
 />
@@ -113,7 +113,7 @@ This feature utilizes advanced AI, such as GPT-4, to annotate your examples base
 
 <img
   className="block"
-  src="images/model-auto-annotation-1.png"
+  src="/images/model-auto-annotation-1.png"
   alt="Auto annotate your data"
   noZoom
 />
@@ -132,7 +132,7 @@ Or semi-manual annotation provides you with an interface to manually label each 
 <Frame>
   <img
     className="block"
-    src="images/model-manual-annotation-1.png"
+    src="/images/model-manual-annotation-1.png"
     alt="Manually annotate your data"
     noZoom
   />
@@ -169,7 +169,7 @@ Once your training is complete, you'll want to integrate it into your project, b
 <Frame>
   <img
     className="block"
-    src="images/model-training-1.png"
+    src="/images/model-training-1.png"
     alt="Start the training"
     noZoom
   />
@@ -192,7 +192,7 @@ You can also test-run the model to quickly test various examples. This is useful
 <Frame>
   <img
     className="block"
-    src="images/model-test-run-1.png"
+    src="/images/model-test-run-1.png"
     alt="Test your model"
     noZoom
   />
