--- a/content-moderation/custom-region.mdx
+++ b/content-moderation/custom-region.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Custom region"
 sidebarTitle: "Custom region"
-description: "Learn how to use a custom region for your project."
+description: "Learn how to optimize your project with a custom region."
 ---
 
 Using a custom region is useful if you want to optimize your projects performance. You can select region near your own servers to reduce latency.
