--- a/content-moderation/custom-region.mdx
+++ b/content-moderation/custom-region.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Custom region"
-sidebarTitle: "Custom region"
+title: "Custom regions"
+sidebarTitle: "Custom regions"
 description: "Learn how to optimize your project with a custom region."
 ---
 
@@ -8,8 +8,8 @@ Using a custom region is useful if you want to optimize your projects performanc
 
 To use a custom region, please contact us at [support@moderationapi.com](mailto:support@moderationapi.com) and we'll set it up for you.
 
-<Callout type="info">
+<Info>
   The default region is in central Europe, Frankfurt `eu-central-1`. If your
   servers are also in central Europe, you probably don't need to set a custom
   region.
-</Callout>
+</Info>
